# LearnRayTracing

./: .gitattributes  CMakeLists.txt  README.md
resources/ppm/: book1.ppm  filmTest.ppm  model.ppm
src/: main.cpp  rtweekend.h
src/accelerate/: aabb.hpp  bvh.hpp
src/camera/: camera.hpp  film.hpp
src/instance/: rotate.hpp  transform.h  translate.hpp
src/material/: dielectric.hpp  diffuse_light.hpp  isotropic.hpp  lambertian.hpp  material.hpp  materials.h  metal.hpp
src/object/: constant_medium.hpp  model.hpp  objects.h  quad.hpp  sphere.hpp  triangle.hpp
src/ray/: hittable.hpp  hittableList.hpp  ray.hpp
src/texture/: checker_texture.hpp  image_texture.hpp  noise_texture.hpp  rtw_image.hpp  solid_color.hpp  texture.hpp  textures.h
src/util/: color.hpp  interval.hpp  perlin.hpp  spin_lock.hpp  thread_pool.hpp  vec3.hpp
